Fixed navbar element alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,7 +598,7 @@ body {
 }
 
 .navbar-item {
-  margin: 0 10px;
+  margin: 0 5px;
   /* Adjust the horizontal margin to increase spacing */
   padding: 0;
   /* Remove default padding */
@@ -760,7 +760,7 @@ body {
 }
 
 .navbar-item {
-  margin: 0 10px;
+  margin: 0 5px;
   padding: 0;
 }
 
